# Tsunami-SPGT

./: CMakeLists.txt  README.md  app.qrc  install_dependencies.sh  quick_setup.sh  setup_database.sh
include/: DatabaseView.h  FocalMechanismWidget.h  MainWindow.h  MapView.h  MenuBar.h  SeismicEventTable.h
resources/map/: index.html
resources/theme/: dark-transparent.css  dark.css  light-transparent.css  light.css
scripts/: verify_files.sh
src/: DatabaseView.cpp  FocalMechanismWidget.cpp  MainWindow.cpp  MapView.cpp  MenuBar.cpp  SeismicEventTable.cpp
theme/: dark-transparent.css  dark.css  light-transparent.css  light.css
